# bridge-handler-rs

./: .dockerignore  .env_example  Cargo.toml  Dockerfile  compose.yaml  emojis.txt
src/: emojis.rs  handler.rs  main.rs  model.rs  patterns.rs  util.rs
